@@ -1,3 +1,11 @@
+2011-09-29  Armando Basile  <hmandevteam@gmail.com>
+
+	* comex-qt.csproj:
+	* MainClass.cs:
+	* AssemblyInfo.cs:
+	* MainWindowClass.cs:
+	* MainWindowClass.Designer.cs: - release 0.1.6.0
+
 2011-09-12  Armando Basile  <hmandevteam@gmail.com>
 
 	* readme:
